# writerlore

./: .gitignore  README.md  pyproject.toml  run-server.sh  session-recall.py  setup.sh
.claude/: settings.json
src/writerlore/: db.py  embeddings.py  schema.py  server.py
