[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "writerlore"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "pymongo>=4.6",
    "sentence-transformers>=2.0",
    "mcp>=1.0",
]

[project.scripts]
writerlore = "writerlore.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/writerlore"]
